<resources>
    <string name="app_name">TheHangman</string>
    <string name="title_app" translatable="false">The Hangman</string>
    <string name="secret_word">secret word</string>
    <string name="number_of_lifes">"Number of lives:   "</string>
    <string name="letters_in_word">"Letters in word:  "</string>
    <string name="secret_reveal">"The word you were looking for was:"</string>
    <string name="q" translatable="false">Q</string>
    <string name="w" translatable="false">W</string>
    <string name="e" translatable="false">E</string>
    <string name="r" translatable="false">R</string>
    <string name="t" translatable="false">T</string>
    <string name="z" translatable="false">Z</string>
    <string name="u" translatable="false">U</string>
    <string name="i" translatable="false">I</string>
    <string name="o" translatable="false">O</string>
    <string name="p" translatable="false">P</string>
    <string name="a" translatable="false">A</string>
    <string name="s" translatable="false">S</string>
    <string name="d" translatable="false">D</string>
    <string name="f" translatable="false">F</string>
    <string name="g" translatable="false">G</string>
    <string name="h" translatable="false">H</string>
    <string name="j" translatable="false">J</string>
    <string name="k" translatable="false">K</string>
    <string name="l" translatable="false">L</string>
    <string name="y" translatable="false">Y</string>
    <string name="x" translatable="false">X</string>
    <string name="c" translatable="false">C</string>
    <string name="v" translatable="false">V</string>
    <string name="b" translatable="false">B</string>
    <string name="n" translatable="false">N</string>
    <string name="m" translatable="false">M</string>
    <string name="time" translatable="false">00:00:00</string>
    <string name="loss_dlg">You lost!</string>
    <string name="ok" translatable="false">ok</string>
    <string name="win_dlg">You win!</string>
    <string name="you_lost_dlg">You lost!</string>
    <string name="lost_reveal">You lost!</string>
    <string name="new_loss">New</string>
    <string name="menu_loss" translatable="false">Menu</string>
    <string name="you_win">You win!</string>
    <string name="you_win_reveal">"The word is indeed: "</string>
    <string name="new_win">New</string>
    <string name="menu_win" translatable="false">Menu</string>
    <string name="choose_difficulty">Choose difficulty:</string>
    <string name="pick_the_word_length">Pick the word length:</string>
    <string name="start" translatable="false">Start</string>
    <string name="back">Back</string>
    <string name="menu_game" translatable="false">menu</string>
    <string name="new_game">New Game</string>
    <string name="settings">Settings</string>
    <string name="load">Load</string>
    <string name="high_score">High score</string>
    <string name="diff_easy">Easy</string>
    <string name="diff_medium">Medium</string>
    <string name="diff_hard">Hard</string>
    <string name="total_time">Total time:</string>
    <string name="your_score_is">Your score is:</string>
    <string name="length_short">Short</string>
    <string name="length_medium">Medium</string>
    <string name="length_long">Long</string>
    <string name="length_very_long">Very long</string>
    <string name="je" translatable="false">Ě</string>
    <string name="sh" translatable="false">Š</string>
    <string name="tch" translatable="false">Č</string>
    <string name="rzh" translatable="false">Ř</string>
    <string name="zh" translatable="false">Ž</string>
    <string name="yy" translatable="false">Ý</string>
    <string name="aa" translatable="false">Á</string>
    <string name="ii" translatable="false">Í</string>
    <string name="ee" translatable="false">É</string>
    <string name="di" translatable="false">Ď</string>
    <string name="ti" translatable="false">Ť</string>
    <string name="uu1" translatable="false">Ú</string>
    <string name="uu2" translatable="false">Ů</string>
    <string name="OO" translatable="false">Ó</string>
</resources>